--- a/css/style-franchise.css
+++ b/css/style-franchise.css
@@ -8,7 +8,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #444444;
-	color: #000000;
+	background-color: #f3f3f3;
 }
 
 p {
@@ -29,30 +29,38 @@ header {
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* background-color: aliceblue; 後で削除する */
 	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    justify-content: space-around;
 	background-color: #ffffff;
+	
 }
 
 .container {
-	width: 1040px;
+	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* border: double 2px; 後で削除する */
+	/* border: double 2px; 後で削除 */
 }
 
 .logo-oya {
 	margin-top: 15px;
 }
 
-.nav-oya {
-	width: 800px;
-	/* background-color: yellowgreen; 後で削除する */
+.logo-oya img {
+     text-align: center;
+	 margin-top: -8px;
 }
+
+.nav-oya {
+	width: 720px;
+	/* background-color: yellowgreen; 後で削除 */
+}
+
 
 .nav ul {
 	width: 660px;
@@ -66,6 +74,8 @@ header {
 .nav ul li {
 	list-style: none;
 	color: 444444;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -82,8 +92,13 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
 
-
+.logo-oya {
+	height: 105px;
+}
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -112,7 +127,7 @@ header {
 }
 
 .mainvisual {
-	padding: 300px 0;
+	padding: 150px 0;
 	background-image: url(../img/mainvisual.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -193,9 +208,9 @@ footer {
 .ft-nav {
     width: 100%;
 	margin: 0 auto;
-	text-align: center;
 	background-color: #CCCCCC;
 }
+
 /* ==========================
          フッターリスト
 ============================= */
@@ -208,7 +223,6 @@ footer {
 	color: #444444;
 	color: #000000;
 }
-
 
 .ft-nav ul {
 	height: 120px;
@@ -257,6 +271,7 @@ a {
 	color: #000000;
 
 }
+
 /* ========================= */
 .sns {
 	width: 100%;
