--- a/css/style-about.css
+++ b/css/style-about.css
@@ -129,55 +129,34 @@ ul li img {
 ============================= */
 .contents-oya {
 	width: 100%;
-	/* background-color: #f3f3f3; */
-	padding-top: 30px;
+	background-color: #f3f3f3;
+	padding-top: 130px;
+    padding-bottom: 50px;
 }
+
 .brand_detail {
-	margin-top: 120px;
+	width: 800px;
+	margin: 30px auto;
 }
 
-.brand_detail p {
-	line-height: 30px;
-}
-
-.brand_detail2 {
-	margin-bottom: 50px;
-}
 .brand_ttl {
 	width: 590px;
 	margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
+.brand_ttl a {
+	color: #444444;
+	border-bottom: solid 1px;
+}
 
-
-/* ==========================
-          写真3列2行
-============================= */
-
-.brand-list{
-	width: 800px;
-	margin: 0 auto;
-	display: flex;
-	flex-wrap:wrap;
-	padding: 10px;
-	}
-
-.brand-list li {
-	width: calc(100%/3);/*←画像を横に3つ並べる場合*/
-	padding: 20px 0 20px 25px;/*←画像の左右余白を入れる場合*/
-	box-sizing:border-box;
-	list-style: none;
-	}
-	
-.brand-list li img {
-	max-width:100%; /*画像のはみだしを防ぐ*/
-	height: auto; /*画像の縦横比を維持 */
-	}
-
-.brand-list p {
+.brand_ttl h2 {
 	text-align: center;
+	font-size: 28px;
+	padding-bottom: 10px;
 }
+
+
 /* ==========================
          フッター
 ============================= */
