--- a/css/style-company.css
+++ b/css/style-company.css
@@ -11,6 +11,9 @@ body {
 	background-color: #f3f3f3;
 }
 
+p {
+	font-size: small;
+}
 /* ===========================
             ヘッダー
 =========================== */
@@ -20,7 +23,7 @@ body {
 	visibility: hidden;
 	height: 0;
  }
- /* ======================= */
+ 
 header {
 	width: 100%;
 	margin: 0 auto;
@@ -31,12 +34,12 @@ header {
     left: 0;
     z-index: 500;
     justify-content: space-around;
-	background-color: #ffffff;
-	
+	background-color: #ffffff;	
 }
 
 .container {
 	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
@@ -49,13 +52,13 @@ header {
 
 .logo-oya img {
      text-align: center;
+	 margin-top: -8px;
 }
 
 .nav-oya {
 	width: 720px;
 	/* background-color: yellowgreen; 後で削除 */
 }
-
 
 .nav ul {
 	width: 660px;
@@ -69,6 +72,8 @@ header {
 .nav ul li {
 	list-style: none;
 	color: 444444;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -85,6 +90,14 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
+
+.logo-oya {
+	height: 105px;
+}
+
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -97,87 +110,128 @@ header {
 /* ========hover=========== */
 
 /* ==========================
-       TOP
-============================= */
-.brand_main {
-	width: 100%;
-	margin: 0 auto;
-}
-
-.wrap {
-	width: 100%;
-	margin: 100px auto 0 auto;
-	/* background-color: #f3f3f3; */
-}
-
-ul {
-	padding: 0;
-	margin: 0 30px;
-	list-style: none;
-}
-ul li img {
-	max-width: 100%;
-	height: auto;
-}
-.slick-prev::before, .slick-next::before {
-	color: #333;
-}
- 
-
-/* ==========================
-       ブランド展開
+      メインコンテンツ
 ============================= */
 .contents-oya {
 	width: 100%;
-	/* background-color: #f3f3f3; */
-	padding-top: 30px;
-}
-.brand_detail {
-	margin-top: 120px;
-}
-
-.brand_detail p {
-	line-height: 30px;
-}
-
-.brand_detail2 {
-	margin-bottom: 50px;
-}
-.brand_ttl {
-	width: 590px;
+	background-color: #f3f3f3;
 	margin: 0 auto;
-    text-align: center;
+	padding-bottom: 30px;
+	margin: 100px auto 0 auto;
 }
 
+.main {
+	width: 100%;
+	margin: 0 auto;
+}
+
+.mainvisual {
+	padding: 150px 0;
+	background-image: url(../img/kodawari.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.mainvisual h1 {
+	margin: 0 400px 0 30px;
+	color: #ffffff;
+}
+
+.contents {
+	width: 880px;
+	margin: 0 auto;
+	text-align: left;
+}
+
+.contents p {
+	font-size: medium;
+	line-height: 30px;
+	margin: 50px 0;
+}
+
+.ceo {
+	text-align: right;
+	padding-bottom: 85px;
+    border-bottom: #000000 1px solid;
+}
+
+
+
+/* ======================= */
+
+/* ======================= */
+
+ .information_oya {
+	 width: 880px;
+	 margin: 0 auto;
+	 padding-bottom: 15px;
+	 display: flex;
+	 justify-content: space-around;
+	 border-bottom: #000000 1px solid;
+	 /* background-color: red; */
+ }
+
+ .infomation_img {
+     width: 50%;
+	 padding: 30px 20px;
+	 /* border: solid 2px; */
+ }
+
+ .infomation_img img {
+	 width: 100%;
+ }
+ .information_txt {
+	 width: 50%;
+	 padding: 20px 5px 0 5px;
+	 /* border: dotted 3px; */
+ }
+
+ .com {
+	text-align: left;
+ }
+
+ .information_ttl {
+	font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 35px;
+    letter-spacing: 5px;
+}
+ 
+ .information_txt th {
+	width: 90px;
+    font-weight: normal;
+    background: none;
+    padding: 15px 0;
+    border-top: #000000 1px solid;
+    font-size: 15px;
+    line-height: 2;
+    vertical-align: top;
+ }
+
+ .information_txt td {
+	padding: 15px 0;
+    border-top: #000000 1px solid;
+    font-size: 15px;
+    line-height: 1.6;
+ }
 
 
 /* ==========================
-          写真3列2行
+         企業理念
 ============================= */
 
-.brand-list{
-	width: 800px;
-	margin: 0 auto;
-	display: flex;
-	flex-wrap:wrap;
-	padding: 10px;
-	}
-
-.brand-list li {
-	width: calc(100%/3);/*←画像を横に3つ並べる場合*/
-	padding: 20px 0 20px 25px;/*←画像の左右余白を入れる場合*/
-	box-sizing:border-box;
-	list-style: none;
-	}
-	
-.brand-list li img {
-	max-width:100%; /*画像のはみだしを防ぐ*/
-	height: auto; /*画像の縦横比を維持 */
-	}
-
-.brand-list p {
+.policy {
+	width: 880px;
+	margin: 20px auto 60px auto;
 	text-align: center;
 }
+
+.policy p {
+	font-size: medium;
+    line-height: 30px;
+	text-align: left;
+}
+
 /* ==========================
          フッター
 ============================= */
@@ -340,9 +394,6 @@ header {
     text-align: center;
 	font-size: smaller;
 }
-
-
-
 
 
 
