--- a/css/style-contact-fc.css
+++ b/css/style-contact-fc.css
@@ -11,6 +11,9 @@ body {
 	background-color: #f3f3f3;
 }
 
+p {
+	font-size: small;
+}
 /* ===========================
             ヘッダー
 =========================== */
@@ -37,6 +40,7 @@ header {
 
 .container {
 	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
@@ -49,6 +53,7 @@ header {
 
 .logo-oya img {
      text-align: center;
+	 margin-top: -8px;
 }
 
 .nav-oya {
@@ -69,6 +74,8 @@ header {
 .nav ul li {
 	list-style: none;
 	color: 444444;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -85,6 +92,13 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
+
+.logo-oya {
+	height: 105px;
+}
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -97,87 +111,182 @@ header {
 /* ========hover=========== */
 
 /* ==========================
-       TOP
-============================= */
-.brand_main {
-	width: 100%;
-	margin: 0 auto;
-}
-
-.wrap {
-	width: 100%;
-	margin: 100px auto 0 auto;
-	/* background-color: #f3f3f3; */
-}
-
-ul {
-	padding: 0;
-	margin: 0 30px;
-	list-style: none;
-}
-ul li img {
-	max-width: 100%;
-	height: auto;
-}
-.slick-prev::before, .slick-next::before {
-	color: #333;
-}
- 
-
-/* ==========================
-       ブランド展開
+      メインコンテンツ
 ============================= */
 .contents-oya {
 	width: 100%;
-	/* background-color: #f3f3f3; */
-	padding-top: 30px;
-}
-.brand_detail {
-	margin-top: 120px;
-}
-
-.brand_detail p {
-	line-height: 30px;
+	background-color: #f3f3f3;
+	margin: 0 auto 60px auto;
+	padding-bottom: 60px;
+	margin: 100px auto 0 auto;
 }
 
-.brand_detail2 {
-	margin-bottom: 50px;
-}
-.brand_ttl {
-	width: 590px;
+.main {
+	width: 100%;
 	margin: 0 auto;
-    text-align: center;
 }
 
+.mainvisual {
+	padding: 60px 0;
+}
 
-
-/* ==========================
-          写真3列2行
-============================= */
-
-.brand-list{
-	width: 800px;
-	margin: 0 auto;
-	display: flex;
-	flex-wrap:wrap;
-	padding: 10px;
-	}
-
-.brand-list li {
-	width: calc(100%/3);/*←画像を横に3つ並べる場合*/
-	padding: 20px 0 20px 25px;/*←画像の左右余白を入れる場合*/
-	box-sizing:border-box;
-	list-style: none;
-	}
-	
-.brand-list li img {
-	max-width:100%; /*画像のはみだしを防ぐ*/
-	height: auto; /*画像の縦横比を維持 */
-	}
-
-.brand-list p {
+.mainvisual h1 {
+	margin: 0;
 	text-align: center;
+	color: #444444;
+	font-size: 38px;
 }
+
+/* ======================= */
+/* contact */
+/* ======================= */
+ .box {
+	width: 720px;
+	margin: 30px auto;
+	text-align: center;
+ }
+
+ .box h2 {
+	 font-size: 22px;
+ }
+
+ .box p {
+	 font-size: 14px;
+ }
+ 
+ .contact-ttl {
+	width: 560px;
+	margin: 0 auto;
+    padding: 10px 20px;
+	text-align: center;
+    background-color: #fff;
+    box-sizing: border-box;
+    box-shadow: 0px 8px 16px -2px rgb(10 10 10 / 10%), 
+	0px 0px 19px 10px rgb(10 10 10 / 2%);
+ }
+
+ .contact-ttl li {
+	 list-style: none;
+	 margin-right: 36px;
+ }
+
+ .tel {
+	 font-size: 36px;
+	 font-weight: bold;
+ }
+ 
+/* ======================= */
+/* CONTACT FORM  */
+/* ======================= */
+#top {
+   width: 100%;   
+   margin: 0 auto;
+   text-align: center;
+   margin-bottom: 80px;
+   /* background-color: azure; */
+  }
+
+
+.cont {
+   width: 100%;
+   margin: 0 auto;
+   /* padding: 50px 30px; */
+   /* background-color: #999; */
+}
+
+.form-cont {
+  width: 880px;
+  margin: 0 auto;
+  /* border: solid 2px; */
+}
+
+form {
+ width: 560px;
+ margin: 0 auto;
+ 
+ text-align: left;
+ /* background-color: aqua; */
+}
+
+form p {
+	font-weight: bolder;
+	font-size: 20px;
+}
+.center  {
+	font-size: 28px;
+	border-bottom: solid 2px;
+}
+
+.caution h3 {
+	font-size: 28px;
+	border-bottom: solid 2px;
+}
+/* ======================= */
+
+input[type="text"] {
+  width: 560px;
+  height: 50px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+
+input[type="email"] {
+  width: 560px;
+  height: 50px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+
+#zip1, #zip2 {
+    width: 160px;
+}
+textarea {
+  min-width: 560px;
+  min-height:150px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+
+.caution {
+  width: 560px;
+  margin: 0 auto;
+}
+
+.kind {
+	width: 560px;
+	display: flex;
+	/* justify-content: space-around;
+	margin: 0 auto; */
+}
+.privacy {
+  text-align: center;
+}
+
+.button {
+  width: 560px;
+  margin-top: 60px;
+}
+.btn {
+  display: block;
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px 70px;
+  box-sizing: border-box;
+  border:solid 2px cadetblue;
+  border-radius: 50px;
+  background-color: #2E5180;
+  color: #ffffff;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+}
+
+
+
+
 /* ==========================
          フッター
 ============================= */
