--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -11,6 +11,9 @@ body {
 	background-color: #f3f3f3;
 }
 
+p {
+	font-size: small;
+}
 /* ===========================
             ヘッダー
 =========================== */
@@ -37,6 +40,7 @@ header {
 
 .container {
 	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
@@ -49,6 +53,7 @@ header {
 
 .logo-oya img {
      text-align: center;
+	 margin-top: -8px;
 }
 
 .nav-oya {
@@ -69,6 +74,8 @@ header {
 .nav ul li {
 	list-style: none;
 	color: 444444;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -85,6 +92,13 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
+
+.logo-oya {
+	height: 105px;
+}
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -97,87 +111,80 @@ header {
 /* ========hover=========== */
 
 /* ==========================
-       TOP
-============================= */
-.brand_main {
-	width: 100%;
-	margin: 0 auto;
-}
-
-.wrap {
-	width: 100%;
-	margin: 100px auto 0 auto;
-	/* background-color: #f3f3f3; */
-}
-
-ul {
-	padding: 0;
-	margin: 0 30px;
-	list-style: none;
-}
-ul li img {
-	max-width: 100%;
-	height: auto;
-}
-.slick-prev::before, .slick-next::before {
-	color: #333;
-}
- 
-
-/* ==========================
-       ブランド展開
+      メインコンテンツ
 ============================= */
 .contents-oya {
 	width: 100%;
-	/* background-color: #f3f3f3; */
-	padding-top: 30px;
-}
-.brand_detail {
-	margin-top: 120px;
-}
-
-.brand_detail p {
-	line-height: 30px;
-}
-
-.brand_detail2 {
-	margin-bottom: 50px;
-}
-.brand_ttl {
-	width: 590px;
+	background-color: #f3f3f3;
 	margin: 0 auto;
-    text-align: center;
+	padding-bottom: 120px;
+	margin: 100px auto 0 auto;
 }
 
-
-
-/* ==========================
-          写真3列2行
-============================= */
-
-.brand-list{
-	width: 800px;
+.main {
+	width: 100%;
 	margin: 0 auto;
-	display: flex;
-	flex-wrap:wrap;
-	padding: 10px;
-	}
+}
 
-.brand-list li {
-	width: calc(100%/3);/*←画像を横に3つ並べる場合*/
-	padding: 20px 0 20px 25px;/*←画像の左右余白を入れる場合*/
-	box-sizing:border-box;
-	list-style: none;
-	}
-	
-.brand-list li img {
-	max-width:100%; /*画像のはみだしを防ぐ*/
-	height: auto; /*画像の縦横比を維持 */
-	}
+.mainvisual {
+	padding: 150px 0;
+	background-image: url(../img/mainvisual.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 
-.brand-list p {
+.mainvisual h1 {
+	margin: 0;
+	color: #ffffff;
+}
+
+.contents {
 	text-align: center;
 }
+
+.contents p {
+	font-size: medium;
+	line-height: 30px;
+	margin: 60px 0;
+}
+
+/* ======================= */
+/* contact */
+/* ======================= */
+ .box {
+	width: 720px;
+	margin: 30px auto;
+	display: flex;
+    justify-content: space-between;
+	align-items: center;
+    padding: 46px 50px;
+    background-color: #fff;
+    box-sizing: border-box;
+    box-shadow: 0px 8px 16px -2px rgb(10 10 10 / 10%), 0px 0px 19px 10px rgb(10 10 10 / 2%);
+ }
+ 
+ .contact-details {
+	 width: 320px;
+ }
+ 
+ .contact-details li {
+	 list-style: none;
+	 margin: 10px 0;
+ }
+
+ .contact-details li a {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background: #000;
+    border-radius: 35px;
+	color: #ffffff;
+    font-weight: bold;
+ }
+
+ 
 /* ==========================
          フッター
 ============================= */
