--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,10 @@ header {
 .brand_ttl {
 	width: 80%;
 }
+	
+.brand_detail {
+    margin: 30px 0 10px 0;
+}
   /* ==========================
          フッター
 ============================= */
