--- a/css/style-brand.css
+++ b/css/style-brand.css
@@ -59,7 +59,6 @@ header {
 	/* background-color: yellowgreen; 後で削除 */
 }
 
-
 .nav ul {
 	width: 660px;
 	display: flex;
@@ -126,15 +125,16 @@ ul li img {
 	color: #333;
 }
  
-
 /* ==========================
        ブランド展開
 ============================= */
 .contents-oya {
 	width: 100%;
+	margin: 0 auto;
 	/* background-color: #f3f3f3; */
 	padding-top: 30px;
 }
+
 .contents {
 	width: 1040px;
 	margin: 0 auto;
@@ -174,6 +174,7 @@ ul li img {
 	height: auto; /*画像の縦横比を維持 */
 	border:solid 1px #ccc; /*←画像を1pxのグレーの枠線で囲む指定の場合*/
 	}
+
 /* ==========================
          フッター
 ============================= */
@@ -199,12 +200,11 @@ footer {
 	background-color: #CCCCCC;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 	margin: 0 auto;
 	background-color: #CCCCCC;
 }
-
 /* ==========================
          フッターリスト
 ============================= */
@@ -218,7 +218,7 @@ footer {
 	color: #000000;
 }
 
-.ft-nav ul {
+.ft-nav ul,  .ft-nav2 ul{
 	height: 120px;
 	line-height: 120px;
 	text-align: center;
@@ -226,14 +226,13 @@ footer {
 	margin: 0 auto;
 }
 
-.ft-nav ul li {
+.ft-nav ul li,  .ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
 	font-size: small;
 	list-style: none;
 }
-
 .border {
 	padding-left:20px;
 	border-left:1px solid #999;
@@ -297,49 +296,24 @@ small {
             ヘッダー
 =========================== */
 header {
-	height: 115px;
+	width: 100%;
 }
 
 .container-oya {
 	width: 100%;
-    margin: 15px auto 0 auto;
-    padding: 10px 10px 0 10px;
-    justify-content: space-between;
-    align-items: center;
-	
 }
 
+.container {
+	width: 100%;
+}
 
 .nav-oya {
 	width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	/* background-color: beige; 後で削除する */
 }
 
 .nav {
 	width: 100%;
-	padding: 0 0 25px 0;
 }
-
-.nav li {
-    margin-left: 10px;
-	display: block;
-	float: left;
-	background-color: #444444;
-    height: 40px;
-	line-height: 40px;
-    width: 190px;
-    text-align: center;
-	font-size: smaller;
-}
-
-
-
-
 
 
 /*　ハンバーガーボタン　*/
@@ -402,7 +376,7 @@ header {
  nav.globalMenuSp {
    position: fixed;
    z-index : 2;
-   top: 25px;
+   top: 10px;
    left : 0;
    color: #000;
    /* background: #fff; */
@@ -444,7 +418,6 @@ header {
  /* このクラスを、jQueryで付与・削除する */
  nav.globalMenuSp.active {
    transform: translateX(0%);
-
  }
 
   .nav {
@@ -452,13 +425,12 @@ header {
  }
 
  .logo-oya {
-	 display: none;
+	margin-left: 60px;
  }
+
 /* ==========================
          フッター
 ============================= */
-
-
 .ft-logo img {
 	width: 240px;
 }
@@ -467,18 +439,30 @@ header {
 	width: 100%;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+    height: 30px;
+    line-height: 30px;
+	padding-top: 20px;
 }
 
+.ft-nav2 ul {
+	width: 100%;
+	height: 30px;
+    line-height: 30px;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 /* ========================= */
 .Copyright {
     width: 100%;
-	
 }
 
 }
@@ -492,80 +476,23 @@ header {
 =========================== */
 header {
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
-	/* background-color: aqua;  後で削除する */
-	background-color: #CCCCCC;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
-}
-
-.container-oya {
-	width: 100%;
-    margin: 0 auto;
-	display: flex;
-    /* flex-direction: column; */
-    align-items: center; 
-}
-
-.logo img {
-	padding-top: 5px;
-	width:180px;
-}
-
-.hd-icon {
-	width: 160px;
-	margin: 20px 20px 0 20px;
-	text-align: center;
-	background-color: #ffffff;	
-}
-
-.hd-icon a {
-	color: #444444;
-}
-/* ========hover=========== */
-
-.hd-icon:hover {
-	background-color: #444444;
-}
-
-.hd-icon p:hover {
-	color: #ffffff;
 }
 
 /* ========hover=========== */
-
 .container {
 	display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.container img {
-	padding: 0 5px;
+	height: 120px;
 }
 
 .nav-oya {
-	/* width: 960px; */
-	height: 5px;
-	/* width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
-	/* background-color: beige; 後で削除する */
+	width: 100%;
 }
 
-
-
-
-
-
-
-
+.logo-oya img {
+    margin-top: 30px;
+}
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -627,7 +554,7 @@ header {
   nav.globalMenuSp {
 	position: fixed;
 	z-index : 2;
-	top: 60px;
+	top: 30px;
 	left : 0;
 	color: #000;
 	/* background: #fff; */
@@ -669,103 +596,72 @@ header {
   /* このクラスを、jQueryで付与・削除する */
   nav.globalMenuSp.active {
 	transform: translateX(0%);
- 
   }
  
    .nav {
 	 display: none;
   }
 
+/* ==========================
+       TOP
+============================= */
+.wrap {
+	margin: 180px auto 0 auto;
+}
 
-  /* ==========================
+/* ==========================
+       ブランド展開
+============================= */
+.contents-oya {
+	width: 90%;
+}
+
+.brand_ttl {
+	width: 90%;
+	margin: 0 auto;
+    border-bottom: solid 3px;
+}
+
+/* ==========================
+          写真3列2行
+============================= */
+
+.brand-list{
+	width: 90%;
+}
+
+/* ==========================
          フッター
 ============================= */
-footer {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-logo {
-	text-align: center;
-	padding-top: 30px;
-}
-
 .ft-logo img {
-	width: 240px;
+	width: 30%;
 }
 
-.ft-nav-oya {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav {
-    width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav ul {
-	width: 68%;
-	line-height: 30px;
-	display: flex;
+ .ft-nav ul {
+    display: flex;
     flex-direction: column;
-	background-color: #CCCCCC; 
-	margin: 30px auto;
-	padding-left: 80px;
-    text-align: start;
+    line-height: 30px;
+    padding-top: 20px
+} 
+
+.ft-nav2 ul {
+	margin-left: 20px;
+	height: 30px;
+    line-height: 30px;
 }
 
-.ft-nav ul li {
-	display: inline;
-	/* margin-right: 10px; */
-	margin: 0 auto;
-	color: #444444;
-	font-size: small;
-	list-style: none;
-	padding-left:10px;
-	border-left:1px solid #999;
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
+
+.list a {
+    font-size: 12px;
 }
-
-.display-none {
-	border-left:0;
-	padding-left:0;
-}
-
-a {
-	text-decoration: none;
-}
-
-/* ========================= */
-.sns {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 15px;
-	background-color: #CCCCCC; 
-	text-align: center;
-}
-
-/* ========================= */
-
-.Copyright {
-    width: 100%;
-	margin: 0 auto;
-	padding: 10px 0;
-	background-color: #CCCCCC;
-	text-align: center;
-}
-
-small {
-    color: #444444;
-	font-size: xx-small;
-}
-
-
-
 
 
 } 
+
+
 
 
