--- a/css/style-franchise.css
+++ b/css/style-franchise.css
@@ -503,6 +503,13 @@ header {
 	width:180px;
 }
 
+.mainvisual {
+    padding: 80px 0;
+}
+
+.mainvisual h1 {
+    margin: 0 30px;
+}	  
 
 /*　ハンバーガーボタン　*/
 .hamburger {
