--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ footer {
 
 .ft-nav ul li,  .ft-nav2 ul li {
 	display: inline;
-	margin-right: 20px;
+	margin-right: 40px;
 	color: #444444;
 	font-size: small;
 	list-style: none;
@@ -666,5 +666,8 @@ header {
     font-size: 14px;
 }
 
+.ft-nav ul li, .ft-nav2 ul li {
+    margin-right: 10px;
+}
 
 } 
