--- a/css/style-brand.css
+++ b/css/style-brand.css
@@ -226,13 +226,22 @@ footer {
 	margin: 0 auto;
 }
 
-.ft-nav ul li,  .ft-nav2 ul li {
+.ft-nav ul li {
+	display: inline;
+	margin-right: 40px;
+	color: #444444;
+	font-size: small;
+	list-style: none;
+}
+
+.ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
 	font-size: small;
 	list-style: none;
 }
+
 .border {
 	padding-left:20px;
 	border-left:1px solid #999;
@@ -659,6 +668,13 @@ header {
     font-size: 14px;
 }
 
+.ft-nav ul li {
+	margin-right: 10px;
+}
+
+.ft-nav2 ul li {
+	margin-right: 20px;
+}
 
 } 
 
