--- a/css/style-franchise.css
+++ b/css/style-franchise.css
@@ -231,9 +231,17 @@ footer {
 	margin: 0 auto;
 }
 
-.ft-nav ul li,  .ft-nav2 ul li {
+.ft-nav ul li {
 	display: inline;
-	margin-right: 50px;
+	margin-right: 40px;
+	color: #444444;
+	font-size: small;
+	list-style: none;
+}
+
+.ft-nav2 ul li {
+	display: inline;
+	margin-right: 20px;
 	color: #444444;
 	font-size: small;
 	list-style: none;
@@ -509,7 +517,7 @@ header {
 
 .mainvisual h1 {
     margin: 0 10px;
-}	  
+}
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -663,6 +671,7 @@ header {
 	margin-left: 20px;
 	height: 30px;
     line-height: 30px;
+	padding: 0;
 }
 
 .ft-contact {
