--- a/css/style.css
+++ b/css/style.css
@@ -432,8 +432,12 @@ header {
  /* ==========================
        ブランド展開
 ============================= */
+.brand_ttl {
+	width: 80%;
+}
+
 .brand-list {
-    width: 100%;
+    width: 80%;
 }
 /* ==========================
          フッター
