--- a/css/style-franchise.css
+++ b/css/style-franchise.css
@@ -154,7 +154,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 50px 100px;
+	margin: 50px ;
  }
  
  .works-card {
