--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 10px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
@@ -221,7 +221,15 @@ footer {
 	color: #000000;
 }
 
-.ft-nav ul,  .ft-nav2 ul{
+.ft-nav ul {
+	height: 120px;
+	line-height: 130px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav2 ul{
 	height: 80px;
 	line-height: 80px;
 	text-align: center;
@@ -645,14 +653,15 @@ header {
          フッター
 ============================= */
 .ft-logo img {
-	width: 10%;
+	width: 20%;
 }
 
  .ft-nav ul {
     display: flex;
     flex-direction: column;
     line-height: 30px;
-    padding-top: 20px
+    padding-top: 20px;
+    padding-bottom: 10px;
 } 
 
 .ft-nav2 ul {
