--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
@@ -453,6 +453,9 @@ header {
 	width: 100px;
 }
 
+.ft-logo {
+    padding: 20px 0 ;
+}
 .ft-nav-oya {
 	width: 100%;
 }
@@ -656,10 +659,6 @@ header {
 	width: 20%;
 }
 	  
-.ft-logo {
-    padding: 20px 0 ;
-}
-
  .ft-nav ul {
     display: flex;
     flex-direction: column;
