--- a/css/style-franchise.css
+++ b/css/style-franchise.css
@@ -191,11 +191,11 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
-	width: 150px;
+	width: 100px;
 }
 
 .ft-nav-oya {
@@ -223,9 +223,17 @@ footer {
 	color: #000000;
 }
 
-.ft-nav ul,  .ft-nav2 ul{
+.ft-nav ul {
 	height: 120px;
-	line-height: 120px;
+	line-height: 130px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav2 ul{
+	height: 80px;
+	line-height: 80px;
 	text-align: center;
 	background-color: #CCCCCC; 
 	margin: 0 auto;
@@ -275,7 +283,7 @@ a {
 .sns {
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	background-color: #CCCCCC; 
 	text-align: center;
 }
@@ -429,7 +437,11 @@ header {
          フッター
 ============================= */
 .ft-logo img {
-	width: 240px;
+	width: 100px;
+}
+
+.ft-logo {
+    padding: 20px 0 ;
 }
 
 .ft-nav-oya {
@@ -441,12 +453,14 @@ header {
 }
 
 .ft-nav ul {
+	width: 80%;
     height: 30px;
     line-height: 30px;
 	padding-top: 20px;
 }
 
 .ft-nav2 ul {
+	width: 80%;
 	height: 30px;
     line-height: 30px;
 }
@@ -458,7 +472,7 @@ header {
 
 /* ========================= */
 .Copyright {
-    width: 100%;
+    width: 100%;	
 }
 
 }
@@ -627,7 +641,7 @@ header {
 /* WORKS */
 /* ======================= */
 .box {
-	width: 80%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -643,24 +657,27 @@ header {
 	width: 100%;
  }
  
-
-
 /* ==========================
          フッター
 ============================= */
 .ft-logo img {
-	width: 30%;
+	width: 20%;
+}
+
+.ft-logo {
+    padding: 20px 0;
 }
 
  .ft-nav ul {
     display: flex;
     flex-direction: column;
     line-height: 30px;
-    padding-top: 20px
+    padding-top: 20px;
+	padding-bottom: 10px;
 } 
 
 .ft-nav2 ul {
-	margin-left: 20px;
+	/* margin-left: 20px; */
 	height: 30px;
     line-height: 30px;
 	padding: 0;
@@ -675,6 +692,8 @@ header {
     font-size: 14px;
 }
 
-
+.ft-nav2 ul li {
+	margin-right: 20px;
+}
 } 
 
